# vendor_brcm_rpi4_custom

./: Android.mk  rpi4-vendor.mk
binder/: Android.mk
hals/: README.md
hals/interfaces/: Android.bp  update-makefiles.sh
hals/interfaces/led/1.0/: Android.bp  ILed.hal
hals/interfaces/led/1.0/default/: Android.bp  Led.cpp  Led.h  android.hardware.rpi.led@1.0-service.rc  android.hardware.rpi.led@1.0.xml  service.cpp
hals/libhardware/: Android.bp
hals/libhardware/example/led/: Android.bp  exam_led_conventional.c
hals/libhardware/include/hardware/: led_conventional.h
hals/libhardware/module/led/: Android.bp  led_conventional.c
hals/libhardware_legacy/: Android.bp  CMakeLists.txt
hals/libhardware_legacy/example/: Android.bp  led.cpp
hals/libhardware_legacy/include/hardware_legacy/: ir_remote.h  leds.h  switch.h
hals/libhardware_legacy/ir_remote/: Android.bp  ir_remote.c
hals/libhardware_legacy/jni/: LedController.cpp  LedController.h  LedController.java  example.cpp
hals/libhardware_legacy/leds/: Android.bp  leds.c
hals/libhardware_legacy/switch/: Android.bp  switch  switch.c
service/java/: Android.bp  Main.java
service/java/com/android/rpi/: RpiService.java
service/java/com/android/rpi/gpio/led/: Android.bp  LedService.java
service/java/leds/: Android.bp  LedController.java
service/jni/: Android.bp  loadJni.cpp
service/jni/leds/: com_android_rpi_gpio_LedController.cpp
